--- a/Circle/index.html
+++ b/Circle/index.html
@@ -8,9 +8,9 @@
 <div id="message"></div>
 
 
-<link rel="stylesheet" href="css.css" type="text/css" />
-<script src="./js/jquery.min.js"></script>
-<script src="./js/kinetic-v5.1.0.js"></script>
+<!--link rel="stylesheet" href="css.css" type="text/css" /-->
+<script src="../js/jquery.min.js"></script>
+<script src="../js/kinetic-v5.1.0.js"></script>
 <script src="edit.js"></script>
 
 <style>
