--- a/error_log.html
+++ b/error_log.html
@@ -1,8 +1,12 @@
 Kinetic.Util.error('You may only add layers to the stage.');
-<br/>
 Kinetic.Util.error('You may only add groups and shapes to a layer.');
-<br/>
 Kinetic.Util.error('You may only add shapes to a fast layer.');
-<br/>
 Kinetic.Util.error('You may only add groups and shapes to groups.');
-<br/>
+
+customShape.fillPatternRepeat('no repeat');
+Uncaught DOMException: Failed to execute 'createPattern' on 'CanvasRenderingContext2D': The provided type ('no repeat') is not one of 'repeat', 'no-repeat', 'repeat-x', or 'repeat-y'.
+
+Cannot read property '_applyTransform' of null
+ (var a= image.toImage({ callback: function(img) {)
+
+Uncaught TypeError: child.getParent is not a function (layer_img.add(imageObj);)
