--- a/diff/canvas_hw_tranparent.html
+++ b/diff/canvas_hw_tranparent.html
@@ -1,4 +1,5 @@
-jQuery( window ).load(function() {	
+<script>
+	jQuery( window ).load(function() {	
 	create_new_canvas(function(a){
 		get_hw_case_transparent();
 	});
@@ -96,3 +97,5 @@ function get_hw_case_transparent(){
 	var caseX_ = min_;
 	console.log(caseheight_+"__"+casewidth_);
 }
+
+</script>
