--- a/diff/canvas_hw_tranparent.html
+++ b/diff/canvas_hw_tranparent.html
@@ -1,7 +1,17 @@
 <script>
-	jQuery( window ).load(function() {	
+jQuery( window ).load(function() {	
 	create_new_canvas(function(a){
-		get_hw_case_transparent();
+		var a = get_hw_case_transparent(stage.getHeight()/2,stage.getWidth()/2);
+		var b = get_hw_case_transparent(stage.getHeight()*1/3,stage.getWidth()*1/3);
+		var c = get_hw_case_transparent(stage.getHeight()*2/3,stage.getWidth()*2/3);
+		console.log("result");
+		console.log(a);
+		console.log(b);
+		console.log(c);
+		//lay trung binh 3 doan x,y
+		var maxx_ = Math.max(a[0],b[0],c[0]);
+		var maxy_ = Math.max(a[1],b[1],c[1]);
+		console.log("x="+maxx_+" y="+maxy_);
 	});
 	
 })
@@ -41,7 +51,7 @@ function create_new_canvas(callback){
 	
 	//var productImg;
 }
-function get_hw_case_transparent(){
+function get_hw_case_transparent(y_forX,x_forY){
 	var arr_ = new Array();
 	var arr1_ = new Array();
 	
@@ -52,7 +62,8 @@ function get_hw_case_transparent(){
 	for ( var xx = 0 ; xx < stage.getWidth(); xx ++)
 	{
 		var x = xx;
-		var y =stage.getHeight()/2;			
+		//var y =stage.getHeight()/2;			
+		var y =y_forX;
 		x1 = parseFloat(x);
 		y1 = parseFloat(y);
 		
@@ -70,7 +81,8 @@ function get_hw_case_transparent(){
 	for ( var yy = 0 ; yy < stage.getHeight(); yy ++)
 	{
 		//checkcase.fire('checkcaseY', {y: yy});
-		var x = stage.getWidth()/2;
+		//var x = stage.getWidth()/2;
+		var x = x_forY;
 		var y = yy;
 				 
 		x1 = parseFloat(x);
@@ -95,7 +107,8 @@ function get_hw_case_transparent(){
 	var max_ = Math.max.apply(null, arr_);
 	var casewidth_ = max_ - min_;
 	var caseX_ = min_;
-	console.log(caseheight_+"__"+casewidth_);
+	//console.log(caseheight_+"__"+casewidth_);
+	return [casewidth_,caseheight_];
 }
 
 </script>
